--- a/InterfazGraficaReto2/packages.config
+++ b/InterfazGraficaReto2/packages.config
@@ -21,12 +21,17 @@
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.NETFramework.ReferenceAssemblies" version="1.0.2" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.NETFramework.ReferenceAssemblies.net472" version="1.0.2" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1652.0" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net472" />
   <package id="Npgsql" version="8.0.3" targetFramework="net472" />
   <package id="OpenTK" version="3.3.1" targetFramework="net472" />
   <package id="OpenTK.GLWpfControl" version="3.3.0" targetFramework="net472" />
+  <package id="OxyPlot.Core" version="2.2.0" targetFramework="net472" />
+  <package id="OxyPlot.Wpf" version="2.2.0" targetFramework="net472" />
+  <package id="OxyPlot.Wpf.Shared" version="2.2.0" targetFramework="net472" />
   <package id="ScottPlot" version="5.1.57" targetFramework="net472" />
   <package id="ScottPlot.WPF" version="5.1.57" targetFramework="net472" />
   <package id="SkiaSharp" version="3.119.0" targetFramework="net472" />
